--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
      <h1>HTK's Blog</h1>
      <ur>
-       <li>1</li>
+       <li><a href="http://www.baidu.com">百度</a></li>
        <li>2</li>
        <li>3</li>
      </ur>
